# absol

./: .gitignore  README.md  pixi.toml  pyproject.toml
configs/: array_gmrt.yaml  model_default.yaml  sim_gmrt_band4.yaml  validate_default.yaml
notebooks/: quickstart.ipynb
scripts/: test.pbs  train.pbs
src/absol/: __init__.py  cli.py  features.py  geometry.py  graphs.py  pipeline.py  utils.py
src/absol/inference/: __init__.py  ms_io.py  run.py
src/absol/model/: __init__.py  encoder.py  gnn.py  temporal.py
src/absol/simulator/: __init__.py  gains.py  rfi.py  scenes.py  sky.py
src/absol/training/: __init__.py  calibrate.py  dataset.py  loop.py  losses.py
src/absol/validation/: __init__.py  coincidence.py  injection.py  noise_curve.py  report.py  residual_stats.py
tests/: conftest.py  test_calibrate.py  test_geometry.py  test_graphs.py  test_lstsq.py  test_ms_io.py  test_physics.py  test_smoke.py
